# blogs

./: .env.development  .env.example  .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .prettierrc  Cargo.toml  README.md  codegen.ts  next.config.mjs  package.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts  tsconfig.json
.github/workflows/: ci.yml  rust_ci.yml
app/: layout.tsx  page.tsx
app/assets/styles/: radix-ui.css
app/components/: login-form.tsx  theme-switch.tsx  totop.tsx
app/config/: index.ts
app/dashboard/: layout.tsx  page.tsx  xx.tsx
app/dashboard/account/: page copy.tsx  page.tsx
app/dashboard/articles/: page.tsx
app/dashboard/articles/create/: page.tsx
app/dashboard/categories/: page.tsx
app/dashboard/signin/: page.tsx
app/hooks/: index.ts  useApollo.ts
app/i18n/: index.tsx
app/i18n/locales/: en.json
app/layouts/: ApolloWrapper.tsx  default.tsx
app/plugins/: apollo.ts
app/privacy/: page.tsx
app/signin/: layout.tsx  page.tsx
app/store/: index.ts  user.ts
app/terms/: page.tsx
configs/: config.toml
layouts/: default.tsx
migrations/: 20240926103755_user.sql  20241008071548_account.sql  20241008071932_session.sql
src/: config.rs  graphql.rs  lib.rs  main.rs
src/api/: person.rs
src/conf/: conf.rs  mod.rs
src/configs/: config.rs  config.toml  config.toml.example
src/handler/: graphql_handler.rs  mod.rs  web_handler.rs
src/handlers/: api_handler.rs  graphql_handler.rs  mod.rs
src/middleware/: appid.rs  mod.rs
src/model/: account.rs  article.rs  article_tag.rs  base.rs  category.rs  file.rs  mod.rs  session.rs  setting.rs  tag.rs  user.rs
src/repository/: db.rs  mod.rs  rdb.rs  redis.rs  repository.rs
src/routes/: api_route.rs  graphql_route.rs  mod.rs
src/service/: account.rs  google.rs  mod.rs  session.rs  user.rs
src/services/: graphql_service.rs  mod.rs
src/utils/: faker.rs
