[package]
name = "blogs"
version = "1.0.0"
description = "Rust talent"
authors = ["cleveng <cleveng@gmail.com>"]
license = "MIT"
edition = "2021"
repository = ""
rust-version = "1.60.0"

[dependencies]
actix-web = "4.3.1"
deadpool-postgres = "0.10.5"
env_logger = "0.10.2"
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = "1.29.1"
tokio-postgres = "0.7.12"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]


[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
