[package]
name = "blogs"
version = "1.0.0"
description = "Rust talent"
authors = ["cleveng <cleveng@gmail.com>"]
license = "MIT"
edition = "2021"
repository = ""
rust-version = "1.60.0"

[dependencies]
actix-web = "4.9.0"
deadpool-postgres = "0.14.0"
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = "1.40.0"
tokio-postgres = "0.7.12"
chrono = { version = "0.4.38", features = ["serde"] }
deadpool-redis = { version = "0.18.0", features = ["serde"] }
redis = { version = "0.27.2", default-features = false, features = [] }

[build-dependencies]


[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
